openshift-v4/templates/knp/jan-test/jan-allow-crunchy-accepts-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jan-allow-crunchy-accepts-test
  namespace: 0ab226-test
  creationTimestamp:
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: tfrs-crunchy-test
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: tfrs-crunchy-test
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: tfrs-backend-test-jan
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: tfrs-scan-handler-test-jan
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: tfrs-celery-test-jan
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              openshift.io/deployer-pod.type: hook-mid
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - podSelector:
            matchLabels:
              cronjob: tfrs-db-backup
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: 30b186
        - podSelector:
            matchLabels:
              app: metabase
    - ports:
        - protocol: TCP
          port: 9187
      from:
        - namespaceSelector:
            matchLabels:
              environment: tools
              name: 0ab226
        - podSelector:
            matchLabels:
              name: crunchy-prometheus
    - ports:
        - protocol: TCP
          port: 5432
      from:
        - namespaceSelector:
            matchLabels:
              environment: test
              name: 30b186
        - podSelector:
            matchLabels:
              app: superset
  policyTypes:
    - Ingress
status: {}
