openshift-v4/templates/knp/jan-test/jan-allow-minio-accepts-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: jan-allow-minio-accepts-test
  creationTimestamp: 
  namespace: 0ab226-test
  labels:
    template: tfrs-network-policy
spec:
  podSelector:
    matchLabels:
      name: tfrs-minio-test
  ingress:
    - ports:
        - protocol: TCP
          port: 9000
      from:
        - podSelector:
            matchLabels:
              name: tfrs-scan-coordinator-test-jan
    - ports:
        - protocol: TCP
          port: 9000
      from:
        - podSelector:
            matchLabels:
              name: tfrs-celery-test-jan
    - ports:
        - protocol: TCP
          port: 9000
      from:
        - podSelector:
            matchLabels:
              name: tfrs-backend-test-jan
  policyTypes:
    - Ingress
status: {}
